# cplusplus-snake-skeleton

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: display.h  food.h
src/: CMakeLists.txt  food.cpp
